- ドキュメントの追加 - コマンドを整理 - フォーマッターを有効化

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "license": "MIT",
   "description": "TypeScript playground.",
   "scripts": {
-    "watch": "run-p watch:* serve",
+    "dev": "run-p watch serve",
+    "lint": "lint:*",
+    "fmt": "prettier -w src",
+    "watch": "run-p watch:*",
     "watch:ts": "tsc -w",
     "watch:sass": "sass src/sass/main.sass dist/css/main.css -w",
     "watch:asset": "cpx \"src/index.html\" dist --watch",
@@ -31,6 +34,7 @@
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.1",
     "sass": "^1.56.2",
     "typescript": "^4.9.4"
   }
